--- a/src/pages/StaticPages.css
+++ b/src/pages/StaticPages.css
@@ -39,13 +39,7 @@
   padding: var(--spacing-24) 10vw;
   border-radius: 0;
   box-shadow: 0 20px 40px -10px rgba(31, 63, 40, 0.2);
-  /* Break out of standard constraints to be wider */
-  width: 100vw;
-  position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
+  width: 100%;
   box-sizing: border-box;
 }
 
